# BDSPro_UDP_v2

./: .gitignore  AUTO_SENDER_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENHANCED_RECEIVER_DOCUMENTATION.md  LICENSE  README.md  UDP_AUTOMATIC_SENDING.md  UDP_TESTING_IMPLEMENTATION.md  auto_receiver_example.yml  auto_sender_example.yml  docker-compose.yml  run_tests.sh
.github/workflows/: ci.yml
bridge-of-bridges/: Cargo.toml  README.md
bridge-of-bridges/network/: Bridge.cpp  Cargo.toml  lib.rs
bridge-of-bridges/network/include/: Bridge.hpp
bridge-of-bridges/spdlog/: Cargo.toml  bridge.cpp  lib.rs
bridge-of-bridges/spdlog/include/: bridge.hpp
bridge-of-bridges/src/: lib.rs
examples/: bridge_example.yml  simple_example.yml  udp_high_frequency_receiver.yml  udp_quick_test.yml  udp_sensor_simulation.yml
network/: Cargo.toml  README.md
network/src/: lib.rs  protocol.rs  receiver.rs  sender.rs
test-node/: Cargo.toml  README.md  run_test.sh
test-node/src/: config.rs  engine.rs  main.rs
test-node/tests/: simple_flow_control_test.rs  test.yml  test2.yml  test3.yml  test4.yml  test_ingestion.yml  test_nes_bridge.yml  test_start_stop.yml  test_udp_integration.yml  udp_integration_tests.rs
