[package]
name = "test-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-node"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "time"] }
tokio-util = "0.7.13"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.25"
bytes = "1.10.0"
udp_channal_demo = { path = "../external/BDSPro_UDP_Channel" }

async-channel = "2.3.1"
crossbeam-queue = "0.3.12"
threadpool = "1.8.1"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"

nes_network = { path = "../network" }